# foxbot

./: .gitignore  Cargo.toml  README.md  facts.json
other/: rename.py
src/: config.rs  main.rs
src/cmd/fun/: fact.rs  fox.rs  mod.rs
src/util/: embed.rs  logger.rs  mod.rs
