[package]
name = "foxbot"
version = "0.1.0"
edition = "2024"
authors = ["April <aprl@aprl.cat>"]
description = "FOXES :3"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.5"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.99"
rand = "0.9.2"
